# panagram

./: .gitignore  .gitmodules  .markdownlint.json  1  LICENSE  MANIFEST.in  README.md  colors.txt  mypy.ini  pip_out.txt  plot_circos.py  plot_pangene.py  preprocess.sh  pyproject.toml  setup.py  test.txt
.github/workflows/: integration.yaml  introgression-example.yaml  lint.yaml
conda-recipe/: meta.yaml
cpp/: Makefile  README.md  Snakefile  anchor.cpp  run_anchor
introgressions/: bed_to_txt.py  call_introgressions.py  create_heatmap.py  run_example.sh  score_introgressions.py  simulate_introgressions.py  visualize_introgressions.py
panagram/: .__main__.py.swp  .kmer_bitmap.py.swp  .view.py.swp  \  __about__.py  __init__.py  __main__.py  bed_to_txt.py  call_introgressions.py  experimentation.py  figs.py  generate_corr_figure.py  index.py  introgression_runner.py  introgression_runner.sh  introgression_threshold_sweep.sh  introgression_threshold_sweep_screen.sh  introgressions.py  introgressions_group_based.py  kmer_bitmap.py  postprocess_introgressions.py  score_introgressions.py  simulate_introgressions.py  test_simulate_introgressions.py  view.py  visualize_introgressions.py
panagram.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
panagram/assets/: custom.css  style.css  tabs.css  view.css
panagram/introgressions/: README.md  annotate_introgressions.py  bed_to_txt.py  call_introgressions.py  (+9 more)
scripts/: make_bins_bits.py  pairwise_comp.py  plot_umaps.py  query_index.py  run_umaps.sh  write_umaps.py
snakemake/: Snakemake
(+5 files in other folders)
