[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "panagram"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "simple_parsing",
    "plotly",
    "dash",
    "pysam",
    "pandas",
    "Bio",
    "scipy",
    "toml",
    "bgzip",
    "mycolorpy",
    "seaborn",
    "umap-learn",
    "sklearn",
    "snakemake>=9"
]

[project.scripts]
panagram = "panagram.__main__:main"
