[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "panagram"
dynamic=["version"]
requires-python = ">=3.11"
dependencies = [
    "simple_parsing",
    "plotly",
    "dash",
    "pysam",
    "pandas",
    "Bio",
    "scipy",
    "toml",
    "bgzip",
    "mycolorpy",
    "seaborn",
    "umap-learn",
    "snakemake>=9",
    "scikit-learn",
]

[project.scripts]
panagram = "panagram.__main__:main"
